--- a/ml-model-api/requirements.txt
+++ b/ml-model-api/requirements.txt
@@ -1,5 +1,8 @@
 flask==3.0.0
 flask-cors==4.0.0
+flask-jwt-extended==4.5.3
+flask-sqlalchemy==3.1.1
+flask-bcrypt==1.0.1
 torch
 torchvision
 pillow
